(PC-16043)[PRO] fix: Mutliple rewords [squash]

--- a/pro/src/components/pages/Offers/Offer/Offer.scss
+++ b/pro/src/components/pages/Offers/Offer/Offer.scss
@@ -91,7 +91,7 @@
     display: flex;
     justify-content: center;
     margin-top: rem.torem(64px);
-
+    width: rem.torem(600px);
     button,
     a {
       flex: 1;
